이미지 연결 테스트

--- a/강아지 찾기 과제.html
+++ b/강아지 찾기 과제.html
@@ -6,13 +6,15 @@
     <style>
         @import url('GameStyle.css');
     </style>
+    <script src="FindDogScript.js">
+    </script>
 </head>
 <body>
     <h2>숨어있는 강아지 찾기</h2>
     <hr><br>
     <div class="Box">
         <div class="infoBox">
-            <div class="infoMenu">
+            <div class="infoMenu" onclick="GameStart()">
                 게임 시작
             </div>
             <div class="infoMenu">
@@ -30,36 +32,36 @@
         </div>
         <div class="game">
             <div class="egg">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
+                <img id="egg1" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg2" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg3" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg4" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg5" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg6" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg7" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg8" src="달걀.jpg" width="100px" height="80px">
             </div>
             <div class="egg">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
-                <img src="달걀.jpg" width="100px" height="80px">
+                <img id="egg9" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg10" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg11" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg12" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg13" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg14" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg15" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg16" src="달걀.jpg" width="100px" height="80px">
             </div>
             <div class="egg">
-                    <img src="달걀.jpg" width="100px" height="80px">
-                    <img src="달걀.jpg" width="100px" height="80px">
-                    <img src="달걀.jpg" width="100px" height="80px">
-                    <img src="달걀.jpg" width="100px" height="80px">
-                    <img src="달걀.jpg" width="100px" height="80px">
-                    <img src="달걀.jpg" width="100px" height="80px">
-                    <img src="달걀.jpg" width="100px" height="80px">
-                    <img src="달걀.jpg" width="100px" height="80px">
+                <img id="egg17" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg18" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg19" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg20" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg21" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg22" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg23" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg24" src="달걀.jpg" width="100px" height="80px">
             </div>
-            </div>
+        </div>
     </div>
 </body>
 </html>
