--- a/강아지 찾기 과제.html
+++ b/강아지 찾기 과제.html
@@ -15,16 +15,27 @@
     <div class="Box">
         <div class="infoBox">
             <div class="infoMenu" onclick="GameStart()">
-                게임 시작
+                <script>
+                    if(game.state)
+                        document.write("");
+                    else
+                        document.write("게임 시작");   
+                </script>
             </div>
             <div class="infoMenu">
-                남은수 : 8
+                <script>
+                    document.write("남은수 : " + game.leftDogs);
+                </script>
             </div>
             <div class="infoMenu">
-                실패수 : 0
+                <script>
+                    document.write("실패수 : " + game.failCnt);
+                </script>
             </div>
             <div class="infoMenu">
-                시간 0
+                <script>
+                    document.write("시간 " + game.seeTime);
+                </script>
             </div>
             <div class="infoMenu">
                 게임이 진행될 <br> 예정입니다.
