클릭 이벤트 추가
실패수와 남은수가 바뀌게 됨,
게임 시작을 누르고 10초간 달걀을 클릭해도 이벤트 작동 안하게 함

--- a/강아지 찾기 과제.html
+++ b/강아지 찾기 과제.html
@@ -17,15 +17,11 @@
             <div id="gameBt" class="infoMenu" onclick="GameStart()">
                 게임 시작
             </div>
-            <div class="infoMenu">
-                <script>
-                    document.write("남은수 : " + game.leftDogs);
-                </script>
+            <div id="leftDogs" class="infoMenu">
+                남은수 : 8
             </div>
-            <div class="infoMenu">
-                <script>
-                    document.write("실패수 : " + game.failCnt);
-                </script>
+            <div id="failCount" class="infoMenu">
+                실패수 : 0
             </div>
             <div id="time" class="infoMenu">
                 시간 10
@@ -36,34 +32,34 @@
         </div>
         <div class="game">
             <div class="egg">
-                <img id="egg1" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg2" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg3" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg4" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg5" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg6" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg7" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg8" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg1" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg2" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg3" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg4" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg5" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg6" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg7" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg8" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
             </div>
             <div class="egg">
-                <img id="egg9" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg10" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg11" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg12" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg13" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg14" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg15" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg16" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg9" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg10" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg11" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg12" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg13" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg14" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg15" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg16" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
             </div>
             <div class="egg">
-                <img id="egg17" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg18" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg19" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg20" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg21" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg22" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg23" src="달걀.jpg" width="100px" height="80px">
-                <img id="egg24" src="달걀.jpg" width="100px" height="80px">
+                <img id="egg17" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg18" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg19" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg20" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg21" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg22" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg23" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
+                <img id="egg24" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
             </div>
         </div>
     </div>
