--- a/강아지 찾기 과제.html
+++ b/강아지 찾기 과제.html
@@ -24,7 +24,7 @@
                 실패수 : 0
             </div>
             <div id="time" class="infoMenu">
-                시간 10
+                시간 : 5
             </div>
             <div id="infoText" class="infoMenu">
                 게임이 진행될 <br> 예정입니다.
@@ -62,6 +62,8 @@
                 <img id="egg24" src="달걀.jpg" width="100px" height="80px" onclick="Click(this.id)">
             </div>
         </div>
+        <div><h1 id="GameOver" class="GameOver">Game Over</h1></div>
+        <div><h1 id="GameSuccess" class="GameSuccess">성공하였습니다!</h1></div>
     </div>
 </body>
 </html>
